<resources>
    <string name="app_name">Gym Training Sheet</string>

    <!-- Login activity -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter">Enter</string>
    <string name="not_registered">Not registered?</string>
    <string name="register_for_free">Register for free</string>

    <!-- Register activity -->
    <string name="register">Register</string>
    <string name="username">Name</string>
    <string name="already_registered">Already registered?</string>
    <string name="return_to_login">Return to login</string>
    <string name="i_have_read">I have read and agree to the Terms of Use and Privacy Policy</string>
    <string name="please_check">Please confirm that you have read and agree to the Terms of Use and Privacy Policy</string>

    <!-- Bottom navigation menu -->
    <string name="home">Home</string>
    <string name="workouts">Workouts</string>
    <string name="manage_week">Manage Week</string>

    <!-- Home fragment -->
    <string name="hello_user">Hello %1$s, ready for some workout today?</string>

    <!-- Week days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- Daily display -->
    <string name="workout_name">%1$s</string>
    <string name="workout_description">%1$s</string>
</resources>